<resources>
    <string name="app_name">Pin code</string>
    <string name="setUpBtn">Set up\npin code</string>
    <string name="resetBtn">Reset\npin code</string>

    <string name="title_logout">Enter pin code</string>
    <string name="title_reset">Repeat old pin code\n to reset</string>
    <string name="title_create">Create pin code</string>
    <string name="title_confirm">Repeat pin code</string>

    <string name="popup_fail">Incorrect pin code,\ntry again</string>
    <string name="popup_different">Pin codes are different,\ntry again</string>
    <string name="popup_saved">Pin code has been saved</string>
    <string name="popup_reset">Pin code has been reset</string>
    <string name="popup_finger_warning">Finger print is currently unavailable</string>
    <string name="popup_simple">Pin is very simple, try again</string>

    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="number_4" translatable="false">4</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_6" translatable="false">6</string>
    <string name="number_7" translatable="false">7</string>
    <string name="number_8" translatable="false">8</string>
    <string name="number_9" translatable="false">9</string>
    <string name="number_0" translatable="false">0</string>

    <string name="img_backspace_sign">Remove entered digit in the pin code field</string>
    <string name="img_fingerprint">Enter using fingerprint</string>
    <string name="img_logout">Buttons which returns to entry pin code window</string>
    <string name="img_pin_dot">Status of fullness of the pin code field</string>
    <string name="second_title">Welcome</string>
    <string name="message_sum">The sum of numbers\npin code is:</string>
    <string name="img_btn_settings">Click here to chose application theme</string>
    <string name="btn_light_theme">Light</string>
    <string name="btn_dark_theme">Dark</string>
    <string name="btn_default_theme">Default as system</string>
</resources>