<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/btnManager"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/btnLightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_light_theme"
            app:layout_constraintBottom_toTopOf="@+id/btnDarkTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSystemTheme" />

        <RadioButton
            android:id="@+id/btnDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dark_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLightTheme" />

        <RadioButton
            android:id="@+id/btnSystemTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_default_theme"
            app:layout_constraintBottom_toTopOf="@+id/btnLightTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>